--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,13 +16,43 @@
         android:theme="@style/Theme.BamostMobileAppV4"
         tools:targetApi="31">
         <activity
+            android:name=".DressScreen"
+            android:exported="false" />
+        <activity
+            android:name=".DressListAdapter.DressList"
+            android:exported="false" />
+        <activity
+            android:name=".menuInfo.ReturnExchange"
+            android:exported="false" />
+        <activity
+            android:name=".menuInfo.OrderBuy"
+            android:exported="false" />
+        <activity
+            android:name=".menuInfo.Cargo"
+            android:exported="false" />
+        <activity
+            android:name=".menuInfo.Comminicate"
+            android:exported="false" />
+        <activity
+            android:name=".menuInfo.WholeSale"
+            android:exported="false" />
+        <activity
+            android:name=".menuInfo.OrderTracking"
+            android:exported="false" />
+        <activity
+            android:name=".Account.AccountAddressesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Account.AccountDetailsActivity"
+            android:exported="false" />
+        <activity
             android:name=".Account.AccountOrderActivity"
             android:exported="false" />
         <activity
-            android:name=".RegisterActivity"
+            android:name=".Account.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".Account.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
